fix get summary endpoint
