# docs/swagger.json
@@ -379,6 +379,30 @@
                     "systems"
                 ],
                 "summary": "システム集計情報取得",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "システムID：指定しない場合は全てのシステムを取得",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "minimum": 10,
+                        "type": "integer",
+                        "default": 3600,
+                        "description": "集計時間スパン（秒）: 10秒刻みで指定可能",
+                        "name": "timeSpan",
+                        "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 12,
+                        "description": "取得データ個数",
+                        "name": "dataCount",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -386,47 +410,6 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/schemas.Summary"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/schemas.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/systems/{id}/level-counts": {
-            "get": {
-                "description": "指定したシステムのログレベルの割合を取得する",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "systems"
-                ],
-                "summary": "ログレベル割合一覧取得",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "システムID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/schemas.LevelCountResponse"
                             }
                         }
                     },
@@ -452,28 +435,6 @@
             "properties": {
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "schemas.LevelCountResponse": {
-            "type": "object",
-            "required": [
-                "errorlog_count",
-                "infolog_count",
-                "warninglog_count"
-            ],
-            "properties": {
-                "errorlog_count": {
-                    "type": "integer",
-                    "example": 10
-                },
-                "infolog_count": {
-                    "type": "integer",
-                    "example": 10
-                },
-                "warninglog_count": {
-                    "type": "integer",
-                    "example": 10
                 }
             }
         },
